# WinlixAPI

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/directories/: main.c
examples/ipc/message-queue/: main.c
examples/ipc/shared-memory/: created.c  read.c
examples/network/: interface.c
examples/process/: main.c  signals.c
include/api/: basetype.h
include/api/directory/: directory.h  path.h
include/api/ipc/: message-queue.h  shared-memory.h
include/api/network/: interface.h
include/api/process/: process.h
include/api/string/: safe.h  validate.h
src/: CMakeLists.txt
src/directory/: directory.c  path.c
src/ipc/: message-queue.c  shared-memory.c
src/network/: interface.c
src/process/: process.c
src/string/: safe.c  validate.c
